# arcflow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  index.html  package.json
apps/mobile/src/: main.tsx
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: ble.rs  command.rs  coyote.rs  device.rs  error.rs  external.rs  lib.rs  output.rs  plugin_api.rs  plugin_bundle.rs  plugin_registry_persistence.rs  plugin_runtime_controller.rs  runtime.rs  safety.rs  script_execution.rs  script_persistence.rs  script_runner.rs  session.rs  wave_submit.rs
crates/external-control/: Cargo.toml
crates/external-control/src/: lib.rs  protocol.rs  security.rs  server.rs  session.rs
crates/plugin-runtime/: Cargo.toml
crates/plugin-runtime/src/: capability.rs  host.rs  javascript.rs  lib.rs  manifest.rs  recording.rs  registry.rs  router.rs  runtime.rs  sandbox.rs  wasm.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs
crates/protocol/src/coyote/: mod.rs  v2.rs  v3.rs
crates/script/: Cargo.toml
crates/script/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  plugin_kv.rs  plugin_registry.rs  scripts.rs
crates/tauri-app/: Cargo.toml
crates/tauri-app/src/: lib.rs
crates/tauri-platform/: Cargo.toml
crates/tauri-platform/src/: ble.rs  lib.rs  native_ble.rs  platform.rs  transport.rs
crates/wave/: Cargo.toml
crates/wave/src/: coyote.rs  error.rs  lib.rs
docs/: architecture.md
docs/agents/: domain.md  issue-tracker.md
docs/external-control/: websocket.md
docs/plugins/: runtime-abi.md
docs/protocol/: coyote.md
docs/testing/: ble-smoke-test.md
