[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/core",
    "crates/external-control",
    "crates/plugin-runtime",
    "crates/protocol",
    "crates/wave",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
arcflow-core = { path = "crates/core" }
arcflow-external-control = { path = "crates/external-control" }
arcflow-plugin-runtime = { path = "crates/plugin-runtime" }
arcflow-protocol = { path = "crates/protocol" }
arcflow-wave = { path = "crates/wave" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
