[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/core",
    "crates/external-control",
    "crates/plugin-runtime",
    "crates/protocol",
    "crates/storage",
    "crates/wave",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
arcflow-core = { path = "crates/core" }
arcflow-external-control = { path = "crates/external-control" }
arcflow-plugin-runtime = { path = "crates/plugin-runtime" }
arcflow-protocol = { path = "crates/protocol" }
arcflow-storage = { path = "crates/storage" }
arcflow-wave = { path = "crates/wave" }
async-trait = "0.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
