[workspace]
members = [
    "apps/desktop/src-tauri",
    "apps/mobile/src-tauri",
    "crates/core",
    "crates/external-control",
    "crates/plugin-runtime",
    "crates/protocol",
    "crates/script",
    "crates/storage",
    "crates/tauri-app",
    "crates/tauri-platform",
    "crates/wave",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
arcflow-core = { path = "crates/core" }
arcflow-external-control = { path = "crates/external-control" }
arcflow-plugin-runtime = { path = "crates/plugin-runtime" }
arcflow-protocol = { path = "crates/protocol" }
arcflow-script = { path = "crates/script" }
arcflow-storage = { path = "crates/storage" }
arcflow-tauri-app = { path = "crates/tauri-app" }
arcflow-tauri-platform = { path = "crates/tauri-platform" }
arcflow-wave = { path = "crates/wave" }
async-trait = "0.1"
futures-util = "0.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = "0.29.0"
