[package]
name = "arcflow-core"
version = "0.1.0"
edition.workspace = true
description = "Core orchestration types for ArcFlow."
publish = false

[dependencies]
arcflow-external-control.workspace = true
arcflow-plugin-runtime.workspace = true
arcflow-protocol.workspace = true
arcflow-wave.workspace = true
async-trait.workspace = true

[lib]
path = "src/lib.rs"
