[package]
name = "arcflow-core"
version = "0.1.0"
edition.workspace = true
description = "Core orchestration types for ArcFlow."
publish = false

[dependencies]
arcflow-external-control.workspace = true
arcflow-plugin-runtime.workspace = true
arcflow-protocol.workspace = true
arcflow-storage.workspace = true
arcflow-wave.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
