[package]
name = "arcflow-tauri-app"
version = "0.1.0"
edition.workspace = true
description = "Shared Tauri 2 application runtime for ArcFlow desktop and mobile shells."
publish = false

[features]
default = []
mobile-shell = []

[dependencies]
arcflow-core.workspace = true
arcflow-external-control.workspace = true
arcflow-plugin-runtime.workspace = true
arcflow-script.workspace = true
arcflow-storage.workspace = true
arcflow-tauri-platform.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"
