[package]
name = "arcflow-tauri-platform"
version = "0.1.0"
edition.workspace = true
description = "Tauri 2 platform adapters for ArcFlow."
publish = false

[dependencies]
arcflow-core.workspace = true
async-trait.workspace = true
btleplug = { workspace = true, optional = true }
tokio.workspace = true
uuid = { workspace = true, optional = true }

[features]
default = []
native-ble = ["btleplug", "uuid"]

[lib]
path = "src/lib.rs"
