[package]
name = "arcflow-tauri-platform"
version = "0.1.0"
edition.workspace = true
description = "Tauri 2 platform adapters for ArcFlow."
publish = false

[dependencies]
arcflow-core.workspace = true
arcflow-protocol.workspace = true
async-trait.workspace = true
btleplug = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio.workspace = true
uuid = { workspace = true, optional = true }

[features]
default = []
native-ble = ["btleplug", "futures-util", "uuid"]

[lib]
path = "src/lib.rs"
