[package]
name = "arcflow-desktop"
version = "0.1.0"
description = "ArcFlow Tauri client"
authors = ["pingfanH"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arcflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arcflow-tauri-app = { workspace = true, features = ["native-ble", "single-instance"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
