[package]
name = "arcflow-mobile"
version = "0.1.0"
description = "ArcFlow Tauri mobile shell"
authors = ["pingfanH"]
edition = "2021"
publish = false

[lib]
name = "arcflow_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arcflow-tauri-app = { workspace = true, default-features = false, features = ["mobile-shell"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
